--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 
 title: [The title of your site]
 description: [A short description of your sites purpose]
-
+show_downloads: ["true"]
