--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-minimal
 
-title: [The title of your site]
-description: [A short description of your sites purpose]
+title: [FEMuS Team Official web site]
 show_downloads: ["true"]
 logo: [figures/swirl2.png]
